<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_bodyinfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/my_card"
    android:layout_marginTop="20dp"
    app:cardElevation="1dp"
    app:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/my_height_icon"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_order"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/user_height"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <View
            android:id="@+id/my_card_ver1"
            style="@style/line_vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/my_weight_icon"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_order"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/user_weight"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <View
            android:id="@+id/my_card_ver2"
            style="@style/line_vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/my_bust_icon"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_order"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/user_bust"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>