<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_card"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_below="@+id/user_head"
    android:layout_marginTop="20dp"
    app:cardElevation="1dp"
    app:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">
            <ImageView
                android:id="@+id/my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_order"
                android:contentDescription="@string/user_order"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_order"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/my_order"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">
            <ImageView
                android:id="@+id/my_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_star"
                android:contentDescription="@string/user_star"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_star"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/my_star"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">
            <ImageView
                android:id="@+id/my_shopcar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_shopcar"
                android:contentDescription="@string/user_shopcar"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_shopcar"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/my_shopcar"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">
            <ImageView
                android:id="@+id/my_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/c_history"
                android:contentDescription="@string/user_history"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_history"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/my_history"
                android:layout_marginTop="5dp"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>